operators/prometheus-operator/1.0.0/CHANGELOG.md
**Important:**
*for the complete changelog, please refer to the website*




## [prometheus-operator-1.0.0](https://github.com/truecharts/charts/compare/prometheus-operator-0.0.8...prometheus-operator-1.0.0) (2023-07-19)

### Chore

- update helm chart common to 13.2.0 ([#10555](https://github.com/truecharts/charts/issues/10555))
  
  


## [prometheus-operator-0.0.8](https://github.com/truecharts/charts/compare/prometheus-operator-0.0.7...prometheus-operator-0.0.8) (2023-07-08)

### Chore

- Update prometheus-operator to v0.66.0 ([#10172](https://github.com/truecharts/charts/issues/10172))
  
  


## [prometheus-operator-0.0.7](https://github.com/truecharts/charts/compare/prometheus-operator-0.0.6...prometheus-operator-0.0.7) (2023-07-01)

### Chore

- update helm general non-major ([#10069](https://github.com/truecharts/charts/issues/10069))
  
  


## [prometheus-operator-0.0.6](https://github.com/truecharts/charts/compare/prometheus-operator-0.0.5...prometheus-operator-0.0.6) (2023-06-13)

### Chore

- update helm chart common to 12.14.2 ([#9599](https://github.com/truecharts/charts/issues/9599))
  
  


## [prometheus-operator-0.0.5](https://github.com/truecharts/charts/compare/prometheus-operator-0.0.4...prometheus-operator-0.0.5) (2023-06-11)

### Chore

- update helm general non-major ([#9558](https://github.com/truecharts/charts/issues/9558))
  - pin dependencies ([#9468](https://github.com/truecharts/charts/issues/9468))
  
  


## [prometheus-operator-0.0.4](https://github.com/truecharts/charts/compare/prometheus-operator-0.0.3...prometheus-operator-0.0.4) (2023-06-08)




## [prometheus-operator-0.0.3](https://github.com/truecharts/charts/compare/prometheus-operator-0.0.2...prometheus-operator-0.0.3) (2023-06-08)




## [prometheus-operator-0.0.2](https://github.com/truecharts/charts/compare/prometheus-operator-0.0.1...prometheus-operator-0.0.2) (2023-06-08)

### Chore

- move container references to tccr.io
  
  


## [prometheus-operator-0.0.1]prometheus-operator-0.0.1 (2023-06-08)

### Add

- add prometheus operator helm chart ([#9418](https://github.com/truecharts/charts/issues/9418))
  
  